2004-12-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: As explained in the previous entry i've decided to add reiser4 detection to gparted as well..

2004-12-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* Added support for reiser4 (only creation atm, since the other functionality appears to be non-free software :/ )
	  Also, libparted isn't able to detect reiser4 yet, a patch to fix this is underway, but i should probably add reiser4 detection to gparted as well.

2004-12-28 Bart Hakvoort  <hakvoort@cvs.gnome.org>
	
	* The Filesystemclasses: Changed 'bool Create( const Glib::ustring & device_path, const Partition & new_partition )'
	to 'bool Create( const Partition & new_partition )'. Since i now use external tools for all filesystems, the partitionpath will suffice.

2004-12-28 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc,
	  src/linux_swap.cc: fixed some issues with linux-swap. From now on you need 'mkswap' to create/resize/move linux-swap.

2004-12-27 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* include/Device.h,
	  src/Device.cc,
	  src/GParted_Core.cc,
	  src/Win_GParted.cc: Removed the ugly Get_Highest_Logical_Busy() from Device and added a classvariable instead. This one is set in
	  GParted_Core and used wherever needed. I also removed Device::busy, and used the new variable to check if a device is busy.

2004-12-27 Bart Hakvoort  <gparted@users.sf.net>

	* Added cylsize to Device and made Operation contain a Device instead of only the path and lenght.
	  This way i was able to dump Get_Cyl_Size in the Core. Besides that, i used cylsize in WinGparted and made a lot of
	  cosmetic changes. Most of them were pretty useless, but hey, i'm bored ;)

2004-12-25 Bart Hakvoort  <gparted@users.sf.net>

	* src/GParted_Core.cc,
	  src/Win_GParted.cc,
	  include/Utils.h,
	  include/GParted_Core.h: moved inline Get_FS from Utils.h to GParted_Core, saves a few K in exe size ;)
