@@ -1,5 +1,9 @@
 2004-12-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
+	* src/jfs.cc: implemented read used/unused space on a jfs filesystem.
+
+2004-12-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: As explained in the previous entry i've decided to add reiser4 detection to gparted as well..
 
